--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -1,6 +1,6 @@
 {
   "time": "What is your goal? Define the duration of your exercises",
-  "serie": "How many repetitions do you want to perform per turn?",
+  "serie": "How many repetitions do you want to perform per loop?",
   "rest": "Define the rest time needed at the end of each loop",
   "loop": "How many loop would you like to do? "
 }
